--- a/client/src/App.css
+++ b/client/src/App.css
@@ -69,11 +69,19 @@ label{
   padding: 5px;
   margin: 0px;
   font-size: 25px;
+  padding: 10px;
+  margin: 0px;
+  font-size: 25px;
+  font-family: "Anton", sans-serif;
+  color: gold;
 }
-.form_container{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+.button{
+  width: 150px;
+  background-color: gold;
+  color: teal;
+  height: 50px;
+  font-size: 24px;
+  font-family: "Anton", sans-serif;
 }
 /*DOG INFO SECTION*/
 .dog_info{
@@ -97,7 +105,6 @@ button {
   height: 50px;
   font-size: 24px;
   font-family: "Anton", sans-serif;
-
 }
 
 .dog_prof{
